fix(ui5-table): improve horizontal alignment handling (#12901)
- use headerCell id instead of individualSlot
- popin cells must always be left aligned

Fixes: #11858
Fixes: #12155
Fixes: #12854

--- a/packages/main/src/themes/TableCellBase.css
+++ b/packages/main/src/themes/TableCellBase.css
@@ -10,6 +10,10 @@
 	box-sizing: border-box;
 }
 
+:host([_popin]) {
+	justify-content: normal !important;
+}
+
 :host([tabindex]:focus) {
 	outline: var(--sapContent_FocusWidth) var(--sapContent_FocusStyle) var(--sapContent_FocusColor);
 	outline-offset: calc(-1 * var(--sapContent_FocusWidth));
